2010-06-03  Jeffrey Stedfast  <fejj@novell.com>

	* pipeline.h (Node::.dtor): Fixed to be virtual.

2010-06-03  Sebastien Pouliot  <sebastien@ximian.com>

	* application.cpp: Ensure Install is called from a user-initiated
	event (unless unattended) and that OutOfBrowserSettings are 
	available (fix crasher).

2010-06-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp: Don't abort again if we already aborted.

2010-06-02  Larry Ewing  <lewing@novell.com>

	* uielement.h:
	* uielement.cpp (Paint): rework the way that the absolute
	transform is applied so that we can pass transforms to Paint.

	* border.cpp:
	* glyphs.cpp:
	* media.cpp:
	* mediaelement.cpp:
	* panel.cpp:
	* shape.cpp:
	* stylus.cpp:
	* textblock.cpp:
	* textbox.cpp: call ::ApplyTransform rather than simply
	calling cairo_set_matrix so that ::Paint can modify the render
	tranform at will.

	* writeablebitmap.cpp: add initial (hacked) support for passing
	transforms to WriteableBitmap::Render.

2010-06-02  Jeffrey Stedfast  <fejj@novell.com>

	* pal/capture/v4l2/pal-v4l2-video-capture.cpp (ReadNextFrame):
	first_pts and new_pts are gint64's and so cannot contain a value
	of G_MAXUINT64.

2010-06-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* application.cpp: downloader_abort: clear the handlers after aborting, since
	we need the stopped handler to be called during the abort to cleanup properly.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* dependencyobject.h:
	* dependencyobject.cpp: Update our implementation of mentors
	  to allow us to listen for changes to the mentor and
	  correctly NULL it out when the mentor is destroyed as if we
	  were to ref the mentor we'd create a cycle.

2010-06-01  Alan McGovern  <amcgovern@novell.com>

	* dependencyobject.h:
	* dependencyobject.cpp: Implement the first section of mentor
	  based databinding. When doing DataContext based bindings on
	  DependencyObjects, we get the DataContext from the first